# galaxybot_Repl.it_ver

./: (확장명만 남기고 이름 지우기!).env  Procfile  README.md  main.py  main_discord_bot.py  pyproject.toml  requirements.txt
cogs/: Disocrdlink.py  Ping.py  Profile.py  Samesay.py  Search.py  Youtube.py  admin.py  ban.py  clean.py  command.py  kick.py  megaphone.py  mute.py  serverinfo.py  test.py  timer.py  unmute.py  uptime.py  userinfo.py
