[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
discord = "^1.0.1"
flask = "^1.1.2"
json-import = "^100.99.99"
Dtime = "^0.1"
"discord.py" = "^1.3.4"
urllib-ext = "^2020.5.1"
dbkrpy = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
